--- a/imagemagick/Makefile
+++ b/imagemagick/Makefile
@@ -13,7 +13,7 @@ PKG_REVISION:=10
 PKG_RELEASE:=1
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/ImageMagick-$(PKG_VERSION)-$(PKG_REVISION)
-PKG_SOURCE:=ImageMagick-$(PKG_VERSION)-$(PKG_REVISION).tar.bz2
+PKG_SOURCE:=ImageMagick-$(PKG_VERSION)-$(PKG_REVISION).tar.xz
 PKG_SOURCE_URL:=ftp://ftp.fifi.org/pub/ImageMagick/
 PKG_MD5SUM:=2cc8726fe38e1ba0677f6b9d607de7d1
 
