--- a/luci-app-pptp-server/Makefile
+++ b/luci-app-pptp-server/Makefile
@@ -1,21 +1,16 @@
-# Copyright (C) 2016 Openwrt.org
+#
+# Copyright (C) 2008-2014 The LuCI Team <luci@lists.subsignal.org>
 #
 # This is free software, licensed under the Apache License, Version 2.0 .
 #
 
 include $(TOPDIR)/rules.mk
 
-LUCI_TITLE:=LuCI support for PPTP VPN Server
-LUCI_DEPENDS:=+pptpd +kmod-mppe +ppp
-LUCI_PKGARCH:=all
-PKG_NAME:=luci-app-pptp-server
-PKG_VERSION:=2.0
-PKG_RELEASE:=7
+LUCI_TITLE:=LuCI page for PPTP VPN Server
+LUCI_DEPENDS:=+pptpd +kmod-mppe +ipset
 
-include $(TOPDIR)/feeds/luci/luci.mk
+include ../../luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
-
-
 
 
